css/rewind.css
/* ... */
.rewind-datepicker-calendar .datepicker--cell.-current- {
    border: 1px solid #333;
    background: linear-gradient(180deg, #F2F2F2 0%, #EDEDED 100%);
    color: var(--text-color-high);
}
body.theme-dark .rewind-datepicker-calendar .datepicker--cell.-current- {
    border: 1px solid #FFF;
    background: transparent;
}
.rewind-datepicker-calendar .datepicker--cell.-other-month- {
    color: var(--text-color-low);
}
.rewind-datepicker-calendar .datepicker--cell .indicator-dot,
.rewind-datepicker-calendar .datepicker--cell .cell-value {
    display: block;
}
.rewind-datepicker-calendar .datepicker--cell .indicator-dot {
    position: relative;
    width: 6px;
    height: 6px;
    border-radius: 100%;
    background: var(--stroke-main-inverted);
    bottom: 10px;
    margin: auto;
}
.rewind-datepicker-calendar .datepicker--cell.-selected- .indicator-dot {
    background: var(--secondary-white);
}

.rewind-calendar-tooltip,
.rewind-list-tooltip {
    font: var(--text-body2);
    color: var(--text-color-high);
    background: var(--surface-grey-1);
}

.rewind-datepicker-calendar .datepicker-overlay {
    position: absolute;
    text-overflow: ellipsis;
    background: var(--datepicker-overlay-background);
    padding: 10px;
    overflow: hidden;
    box-sizing: border-box;
    white-space: pre-wrap;
    display: flex;
    justify-content: center;
    align-items: center;
    font: var(--text-body2);
    top: 0;
    z-index: 2;
    width: 100%;
}

.rewind-datepicker-calendar .datepicker-overlay span a {
    align-self: flex-start;
    font: var(--text-body2-bold);
    text-decoration: underline;
    color: var(--radio-border-active);
}

.rewind-datepicker-calendar .datepicker--body {
    position: relative;
}

.dark-direct-tooltip.simpletip-tooltip i.tooltip-arrow {
    --mask-color: var(--surface-grey-1);
}

.rewind-calendar-tooltip i.item-date {
    color: var(--text-color-higher);
    margin-bottom: 4px;
    display: block;
}

.rewind-calendar-tooltip span i {
    --icon-size: 12px !important;
    font-style: normal;
    vertical-align: middle;
}

.rewind-list-tooltip {
    font: var(--text-body1);
}

.rewind-calendar-tooltip span i.sprite-fm-mono {
    margin-inline-end: 4px;
    -webkit-margin-end: 4px;
}

.rewind-list-tooltip i.icon-arrow-right {
    --icon-size: 16px;
    vertical-align: middle;
    margin: 0 8px;
}

.rewind-calendar-tooltip i.item-added,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown .option i.item-added,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .filter-label i.item-added,
.sidebar .sidebar-container .sidebar-content .content-folder .folder-list .folder-item .folder-details .folder-timestamp i.item-added {
    --mask-color: var(--label-green);
}

.rewind-calendar-tooltip i.item-modified,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown .option i.item-modified,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .filter-label i.item-modified,
.sidebar .sidebar-container .sidebar-content .content-folder .folder-list .folder-item .folder-details .folder-timestamp i.item-modified {
    --mask-color: var(--label-orange);
}

.rewind-calendar-tooltip i.item-removed,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown .option i.item-removed,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .filter-label i.item-removed,
.sidebar .sidebar-container .sidebar-content .content-folder .folder-list .folder-item .folder-details .folder-timestamp i.item-removed {
    --mask-color: var(--label-grey);
}

.sidebar .sidebar-container .sidebar-header .folder-filter {
    display: flex;
    column-gap: 8px;
    align-items: center;
    margin-bottom: 12px;
    color: var(--text-color-high);
    font: var(--text-body1-bold);
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-label {
    display: flex;
    align-items: center;
    font: var(--text-body1);
    font-family: var(--text-font-family-bold);
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button::before {
    border: none;
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button {
    background: transparent;
    border: none;
    cursor: pointer;
    color: var(--text-color-high);
    min-width: unset;
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button > span {
    padding-left: 0;
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button i.icon-dropdown2 {
    --icon-size: 24px;
    transform: rotate(270deg);
    --mask-color: var(--icon-rest);
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button.active i.icon-dropdown2 {
    --icon-size: 24px;
    transform: rotate(0);
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown {
    /* margin-top: 50px;
    margin-inline-start: 70px; */
    height: auto;
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown .option {
    font: var(--text-body1-bold);
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .mega-input-dropdown .option i,
.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .filter-label i.item-icon {
    --icon-size: 12px;
    -webkit-margin-end: 8px;
    margin-inline-end: 8px;
    vertical-align: middle;
}

.sidebar .sidebar-container .sidebar-header .folder-filter .filter-select .filter-select-button .filter-label i.item-icon {
    --icon-size: 24px;
}
/* ... */

